# drift-conference

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
manifests/: dataset_manifest.json
notebooks/: 00_hygiene.ipynb  01_harmonise.ipynb  02_demoA.ipynb  03_demoB.ipynb  04_drift.ipynb  05_rigour.ipynb
paper/: .gitkeep
results/: .gitkeep
src/driftbench/: __init__.py  bootstrap.py  cleaning.py  config.py  drift.py  harmonise.py  manifest.py  metrics.py  models.py  splits.py
