[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftbench"
version = "0.1.0"
description = "Offline drift-aware IDS evaluation (CSE-CIC-IDS2018 + CIC-DDoS2019) -- conference subset of a Q1 study"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anas Biswas" }]
keywords = ["concept-drift", "intrusion-detection", "cic-ids2018", "cic-ddos2019", "calibration"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
lgbm = ["lightgbm>=3.3"]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/USERNAME/drift-conference"
Repository = "https://github.com/USERNAME/drift-conference"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
